Fixed visibility of zoom icons, added alt text to image.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,8 @@ a:hover {
 a:active {
   color: white;
 }
+
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out{
+  color: black !important;
+}
